[tool.poetry]
name = "texas-second-trimester-sepsis"
version = "0.1.0"
description = ""
authors = ["Andrea Suozzo <andrea.suozzo@propublica.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
jupyterlab = "^4.3.5"
sqlalchemy = "^2.0.38"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
